@@ -5,6 +5,7 @@ src/common/notify.c
 src/common/outbound.c
 src/common/plugin.c
 src/common/server.c
+src/common/servlist.c
 src/common/textevents.h
 src/common/text.c
 src/common/util.c
