@@ -721,7 +721,7 @@ fe_dlgbuttons_update (struct session *sess)
 {
 }
 void
-fe_dcc_send_filereq (struct session *sess, char *nick, int maxcps)
+fe_dcc_send_filereq (struct session *sess, char *nick, int maxcps, int passive)
 {
 }
 void
